--- a/css/index.css
+++ b/css/index.css
@@ -15,12 +15,13 @@ header{margin-top: 20px}
 
 @media (max-width: 576px) {
     header{margin-top: 0;}
-    #menu_mobile{display: block;}
     #menu{display: none;}
-    .logo{
-        width: 250px;
+    #menu_mobile{display: block}
+    
+    .logo{display: none;}
+    .logo_min{
         margin-top: 20px;
-        margin-left: 60px;
-        
-    }
+        width: 220px;
+        display: block;}
+
 }
