--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,6 @@ header{margin-top: 20px}
     header{margin-top: 0;}
     #menu{display: none;}
     #menu_mobile{display: block}
-    
     .logo{display: none;}
     .logo_min{
         margin-top: 20px;
@@ -25,5 +24,42 @@ header{margin-top: 20px}
         margin-right: 30px;
         width: 220px;
         display: block;}
+    .dados{margin-top: 15px;}
 
+}
+
+#es{
+   /* background-color: black;*/
+    padding: 15px;
+}
+#di{padding: 15px;}
+
+.login{
+    padding: 15px;
+    border: 1px solid;
+    border-radius: 5px; 
+    height: 100%;
+}
+
+h4{
+    padding: 10px;
+    border-bottom: 1px solid;
+}
+
+#forms{
+    padding-left: 70px;
+    padding-right:70px;
+}
+
+#botao_face{
+    background-color: #3b5998; 
+}
+footer{
+	color: #ffffff;
+	font-size: 12px;
+	background-color: #000000;
+	position: fixed;
+    bottom:0;
+    left:0;
+    width: 100%
 }
