--- a/css/index.css
+++ b/css/index.css
@@ -46,10 +46,10 @@ h4{
     border-bottom: 1px solid;
 }
 
-#forms{
+/*#forms{
     padding-left: 70px;
     padding-right:70px;
-}
+}*/
 
 #botao_face{
     background-color: #3b5998; 
