--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+
+
 header{margin-top: 20px}
 
 /*#div_logo{background-color: blue}*/
@@ -10,7 +12,10 @@ header{margin-top: 20px}
 #search{margin-top: 20px;}
 .dados{ margin-top: 28px;}
 
-#menu{margin-top: 20px;}
+#menu{
+    margin-top: 20px;
+    height: 46px;
+}
 #menu_mobile{display: none;}
 
 @media (max-width: 576px) {
@@ -63,3 +68,29 @@ footer{
     left:0;
     width: 100%
 }
+
+#filtro{
+    margin-top: 50px;
+    padding: 0px;
+}
+
+.filtro_border{
+    height: 280px;
+    border: 1px solid;
+    width: 240px;    
+}
+
+#categorias_titulo{
+    background-color:#BEBEBE; 
+    font-size: 15px;
+}
+.icons{
+    height: 80px;
+}
+#carros{font-size:10px}
+
+#cat_interno{padding: 20px;}
+
+.links{color:inherit;}
+
+a{color: inherit;}
